--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "cli/toiletline"]
-	path = cli/toiletline
+[submodule "browser/toiletline"]
+	path = browser/toiletline
 	url = https://github.com/toiletbril/toiletline
